--- a/doc/source/algorithms/brkga.ipynb
+++ b/doc/source/algorithms/brkga.ipynb
@@ -189,7 +189,7 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    ".. autoclass:: pymoo.algorithms.so_brkga.BRKGA\n",
+    ".. autoclass:: pymoo.algorithms.soo.nonconvex.brkga.BRKGA\n",
     "    :noindex:"
    ]
   }
@@ -211,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
