--- a/doc/source/algorithms/index.ipynb
+++ b/doc/source/algorithms/index.ipynb
@@ -60,7 +60,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sdfs\n"
+     ]
+    }
+   ],
    "source": [
     "from pymoo.factory import get_algorithm\n",
     "algorithm = get_algorithm(\"nsga2\")"
