--- a/doc/source/algorithms/nsga2.ipynb
+++ b/doc/source/algorithms/nsga2.ipynb
@@ -91,9 +91,16 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sdfs\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fcec7bcc810>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fb5001ed890>"
       ]
      },
      "execution_count": 1,
@@ -156,7 +163,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fcec80d2ad0>"
+       "<pymoo.visualization.scatter.Scatter at 0x7fb501e4f1d0>"
       ]
      },
      "execution_count": 2,
@@ -218,7 +225,7 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    ".. autoclass:: pymoo.algorithms.nsga2.NSGA2\n",
+    ".. autoclass:: pymoo.algorithms.moo.nsga2.NSGA2\n",
     "    :noindex:"
    ]
   }
