--- a/doc/source/algorithms/nsga3.ipynb
+++ b/doc/source/algorithms/nsga3.ipynb
@@ -72,7 +72,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fa57f9e9790>"
+       "<pymoo.visualization.scatter.Scatter at 0x7f84c87f4e10>"
       ]
      },
      "execution_count": 1,
@@ -129,7 +129,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fa57fc0cad0>"
+       "<pymoo.visualization.scatter.Scatter at 0x7f84c74cf490>"
       ]
      },
      "execution_count": 2,
@@ -177,7 +177,7 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    ".. autoclass:: pymoo.algorithms.nsga3.NSGA3\n",
+    ".. autoclass:: pymoo.algorithms.moo.nsga3.NSGA3\n",
     "    :noindex:"
    ]
   }
