--- a/doc/source/algorithms/rnsga3.ipynb
+++ b/doc/source/algorithms/rnsga3.ipynb
@@ -66,7 +66,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fe6c1234ad0>"
+       "<pymoo.visualization.scatter.Scatter at 0x7f9f152f1f10>"
       ]
      },
      "execution_count": 1,
@@ -138,7 +138,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fe6c11c1790>"
+       "<pymoo.visualization.scatter.Scatter at 0x7f9f1512e750>"
       ]
      },
      "execution_count": 2,
@@ -209,7 +209,7 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    ".. autoclass:: pymoo.algorithms.rnsga3.RNSGA3\n",
+    ".. autoclass:: pymoo.algorithms.moo.rnsga3.RNSGA3\n",
     "    :noindex:"
    ]
   }
@@ -231,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
