--- a/doc/source/algorithms/unsga3.ipynb
+++ b/doc/source/algorithms/unsga3.ipynb
@@ -187,7 +187,7 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    ".. autoclass:: pymoo.algorithms.unsga3.UNSGA3\n",
+    ".. autoclass:: pymoo.algorithms.moo.unsga3.UNSGA3\n",
     "    :noindex:"
    ]
   }
@@ -209,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
