--- a/doc/source/getting_started/part_2.ipynb
+++ b/doc/source/getting_started/part_2.ipynb
@@ -174,11 +174,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Optimization Test Problems](problems/index.ipynb) | \n",
-    "[Define a Custom Problem](problems/custom.ipynb) | \n",
-    "[Parallelization](problems/parallelization.ipynb) |\n",
-    "[Callback](interface/callback.ipynb) |\n",
-    "[Constraint Handling](misc/constraint_handling.ipynb)"
+    "[Optimization Test Problems](../problems/index.ipynb) | \n",
+    "[Define a Custom Problem](../problems/definition.ipynb) | \n",
+    "[Parallelization](../problems/parallelization.ipynb) |\n",
+    "[Callback](../interface/callback.ipynb) |\n",
+    "[Constraint Handling](../misc/constraint_handling.ipynb)"
    ]
   },
   {
@@ -194,14 +194,14 @@
    "source": [
     "The reason why you became aware of this framework, is probably the existence of an algorithm you like to use. \n",
     "*pymoo* follows an object oriented approach and, thus, we have to define an algorithm object next. \n",
-    "Depending on the optimization problem, different algorithms will perform better or worse on different kind of problems. It is recommendable to first understand the intuition behind an algorithm and then select one which seems to be most suitable for solving your optimization problem. A list of algorithms which are available in *pymoo* is available [here](algorithms/index.ipynb)."
+    "Depending on the optimization problem, different algorithms will perform better or worse on different kind of problems. It is recommendable to first understand the intuition behind an algorithm and then select one which seems to be most suitable for solving your optimization problem. A list of algorithms which are available in *pymoo* is available [here](../algorithms/index.ipynb)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In our case, the optimization problem is rather simple, but the aspect of having two objectives and two constraints should be considered. Thus, let us select the well-known multi-objective algorithm [NSGA-II](algorithms/nsga2.ipynb). \n",
+    "In our case, the optimization problem is rather simple, but the aspect of having two objectives and two constraints should be considered. Thus, let us select the well-known multi-objective algorithm [NSGA-II](../algorithms/nsga2.ipynb). \n",
     "For the majority of algorithms you could either choose the default hyper-parameters or create your own version of the algorithm by modifying them.\n",
     "For instance, for this relatively simple problem we choose a population size of 40 (`pop_size=40`) and with only 10 (`n_offsprings=10`) in each generation. \n",
     "Such an implementation is a greedier variant and improves the convergence of simpler optimization problems without major difficulties regarding optimization, such as the existence of local Pareto-fronts.\n",
@@ -278,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can find a list and explanations of termination criteria available in *pymoo* [here](interface/termination.ipynb). If no termination criteria is defined, then the progress in the design and objective space will kept track of in each iteration. When no significant progress has been made (this is the art of defining what that shall be), the algorithm terminates. "
+    "You can find a list and explanations of termination criteria available in *pymoo* [here](../interface/termination.ipynb). If no termination criteria is defined, then the progress in the design and objective space will kept track of in each iteration. When no significant progress has been made (this is the art of defining what that shall be), the algorithm terminates. "
    ]
   },
   {
@@ -292,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we are solving the `problem` with the `algorithm` and `termination` we have defined. The functional interface uses the `minimize` method. By default, the `minimize` performs deep-copies of the algorithm and the termination object which guarantees they are not modified during the function call. This is important to ensure that repetitive function calls with the same random seed end up with the same results. When the algorithm has been terminated, the `minimize` function returns a [Result](interface/result.ipynb) object."
+    "Finally, we are solving the `problem` with the `algorithm` and `termination` we have defined. The functional interface uses the `minimize` method. By default, the `minimize` performs deep-copies of the algorithm and the termination object which guarantees they are not modified during the function call. This is important to ensure that repetitive function calls with the same random seed end up with the same results. When the algorithm has been terminated, the `minimize` function returns a [Result](../interface/result.ipynb) object."
    ]
   },
   {
