--- a/doc/source/getting_started/preface.ipynb
+++ b/doc/source/getting_started/preface.ipynb
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Of course, this shall not be an exhaustive list of problem characteristics but rather an idea of how fundamentally different optimization problems are. Being aware of possible challenges, one can make better decisions regarding a method and its suitability. In this tutorial, solving a constrained bi-objective optimization problem is demonstrated. This, and your problem's characterstics shall help you to use **pymoo** as a toolbox to tackle your optimization problem."
+    "Of course, this shall not be an exhaustive list of problem characteristics but rather an idea of how fundamentally different optimization problems are. Being aware of possible challenges, one can make better decisions regarding a method and its suitability. In this tutorial, solving a constrained bi-objective optimization problem is demonstrated. This, and your problem's characterstics shall help you to use *pymoo* as a toolbox to tackle your optimization problem."
    ]
   }
  ],
