--- a/doc/source/interface/algorithm.ipynb
+++ b/doc/source/interface/algorithm.ipynb
@@ -40,14 +40,14 @@
     "    :class: myOwnStyle\n",
     "\n",
     "    - `Functional <minimize.ipynb>`_: Use the minimize method and pass the algorithm object.\n",
-    "    - `Object-oriented <algorithms/index.ipynb>`_: Advance the algorithm until it has been terminated. Even more detailed, you can use the `infill()` method to retrieve the solutions to be evaluated and interfere if necessary. For more details, please have a look at the algorithm tutorial `here <algorithms/index.ipynb>`_."
+    "    - `Object-oriented <../algorithms/index.ipynb>`_: Advance the algorithm until it has been terminated. Even more detailed, you can use the `infill()` method to retrieve the solutions to be evaluated and interfere if necessary. For more details, please have a look at the algorithm tutorial `here <../algorithms/index.ipynb>`_."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For a list of algorithms in *pymoo* please have a look here [here](algorithms/list.ipynb>). For instance, NSGA-II can be initialized by:"
+    "For a list of algorithms in *pymoo* please have a look here [here](../algorithms/index.ipynb>). For instance, NSGA-II can be initialized by:"
    ]
   },
   {
