--- a/doc/source/interface/problem.ipynb
+++ b/doc/source/interface/problem.ipynb
@@ -33,9 +33,9 @@
     ".. admonition:: Overview\n",
     "    :class: myOwnStyle\n",
     "\n",
-    "    - `Problem <problems/index.ipynb>`_: Object-oriented definition :code:`Problem` which implements a method evaluating a **set** of solutions.\n",
-    "    - `ElementwiseProblem <problems/index.ipynb>`_: Object-oriented definition :code:`ElementwiseProblem` which implements a function evaluating a **single** solution at a time. \n",
-    "    - `FunctionalProblem <problems/index.ipynb>`_: Define a problem :code:`FunctionalProblem` by using a **function** for each objective and constraint."
+    "    - `Problem <../problems/index.ipynb>`_: Object-oriented definition :code:`Problem` which implements a method evaluating a **set** of solutions.\n",
+    "    - `ElementwiseProblem <../problems/index.ipynb>`_: Object-oriented definition :code:`ElementwiseProblem` which implements a function evaluating a **single** solution at a time. \n",
+    "    - `FunctionalProblem <../problems/index.ipynb>`_: Define a problem :code:`FunctionalProblem` by using a **function** for each objective and constraint."
    ]
   },
   {
@@ -117,7 +117,7 @@
     ".. admonition:: Tip\n",
     "    :class: myOwnStyle\n",
     "\n",
-    "    For more information, please look at the problem tutorial available `here <problems/index.ipynb>`_. Moreover, a number of test problems frequently being use for benchmarking the performance of an algorithm are listed `here <problems/test_problems.ipynb>`_."
+    "    For more information, please look at the problem tutorial available `here <../problems/index.ipynb>`_. Moreover, a number of test problems frequently being use for benchmarking the performance of an algorithm are listed `here <../problems/test_problems.ipynb>`_."
    ]
   }
  ],
