--- a/doc/source/versions.ipynb
+++ b/doc/source/versions.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 0.4.2\n",
+    "#### 0.4.2 [[Documentation](http://data.pymoo.org/docs/pymoo-0.4.2-doc.zip)]\n",
     "\n",
     "- Improved Getting Started Guide with a new interface of providing functions instead of implementing the problem class\n",
     "- New Algorithm: PSO for single-objective problems\n",
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 0.4.1 [[Documentation](https://www.egr.msu.edu/coinlab/blankjul/pymoo-0.4.1-doc.zip)]\n",
+    "#### 0.4.1 [[Documentation](http://data.pymoo.org/docs/pymoo-0.4.1-doc.zip)]\n",
     "\n",
     "- New Feature: Riesz s-Energy Method to generate a well-spaced point-set on the unit simplex (reference directions) of arbitrary size.\n",
     "- New Algorithm: An implementation of Hooke and Jeeves Pattern Search (well-known single-objective algorithm)\n",
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 0.4.0 [[Documentation](https://www.egr.msu.edu/coinlab/blankjul/pymoo-0.4.0-doc.zip)]\n",
+    "#### 0.4.0 [[Documentation](http://data.pymoo.org/docs/pymoo-0.4.0-doc.zip)]\n",
     "\n",
     "  - New Algorithm: CMA-ES (Implementation published by the Author)\n",
     "  - New Algorithm: Biased-Random Key Genetic Algorithm (BRKGA)\n",
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 0.3.2 [[Documentation](https://www.egr.msu.edu/coinlab/blankjul/pymoo-0.3.2-doc.zip)]\n",
+    "#### 0.3.2 [[Documentation](http://data.pymoo.org/docs/pymoo-0.3.2-doc.zip)]\n",
     "\n",
     "  - New Algorithm: Nelder Mead with box constraint handling in the design space\n",
     "  - New Performance indicator: Karush Kuhn Tucker Proximity Measure (KKTPM)\n",
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 0.3.1 [[Documentation](https://www.egr.msu.edu/coinlab/blankjul/pymoo-0.3.1-doc.zip)]\n",
+    "#### 0.3.1 [[Documentation](http://data.pymoo.org/docs/pymoo-0.3.1-doc.zip)]\n",
     "\n",
     "  - Merging pymop into pymoo - all test problems are included\n",
     "  - Improved Getting Started Guide\n",
