--- a/doc/source/algorithms/ctaea.ipynb
+++ b/doc/source/algorithms/ctaea.ipynb
@@ -32,7 +32,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fed6b1e7bd0>"
+       "<pymoo.visualization.scatter.Scatter at 0x7f918f201f50>"
       ]
      },
      "execution_count": 1,
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7fed6b2dfa50>"
+       "<pymoo.visualization.scatter.Scatter at 0x7f918e86d590>"
       ]
      },
      "execution_count": 2,
@@ -144,7 +144,7 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    ".. autoclass:: pymoo.algorithms.ctaea.CTAEA\n",
+    ".. autoclass:: pymoo.algorithms.moo.ctaea.CTAEA\n",
     "    :noindex:"
    ]
   },
