--- a/doc/source/algorithms/differential_evolution.ipynb
+++ b/doc/source/algorithms/differential_evolution.ipynb
@@ -117,7 +117,7 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    ".. autoclass:: pymoo.algorithms.so_de.DE\n",
+    ".. autoclass:: pymoo.algorithms.soo.nonconvex.de.DE\n",
     "    :noindex:"
    ]
   }
@@ -139,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
