--- a/doc/source/algorithms/genetic_algorithm.ipynb
+++ b/doc/source/algorithms/genetic_algorithm.ipynb
@@ -107,7 +107,7 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    ".. autofunction:: pymoo.algorithms.so_genetic_algorithm.GA\n",
+    ".. autofunction:: pymoo.algorithms.soo.nonconvex.ga.GA\n",
     "    :noindex:"
    ]
   }
@@ -129,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
