--- a/doc/source/algorithms/nelder_mead.ipynb
+++ b/doc/source/algorithms/nelder_mead.ipynb
@@ -38,7 +38,7 @@
     }
    ],
    "source": [
-    "from pymoo.algorithms.soo.convex.nonderiv.nelder_mead import NelderMead\n",
+    "from pymoo.algorithms.soo.nonconvex.nelder_mead import NelderMead\n",
     "from pymoo.factory import get_problem\n",
     "from pymoo.optimize import minimize\n",
     "\n",
@@ -67,7 +67,7 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    ".. autoclass:: pymoo.algorithms.so_nelder_mead.NelderMead\n",
+    ".. autoclass:: pymoo.algorithms.soo.nonconvex.nelder_mead.NelderMead\n",
     "    :noindex:"
    ]
   }
@@ -89,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
