--- a/doc/source/algorithms/pattern_search.ipynb
+++ b/doc/source/algorithms/pattern_search.ipynb
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "from pymoo.algorithms.soo.convex.nonderiv.pattern_search import PatternSearch\n",
+    "from pymoo.algorithms.soo.nonconvex.pattern_search import PatternSearch\n",
     "from pymoo.factory import Himmelblau\n",
     "from pymoo.optimize import minimize\n",
     "\n",
@@ -72,7 +72,7 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    ".. autoclass:: pymoo.algorithms.so_pattern_search.PatternSearch\n",
+    ".. autoclass:: pymoo.algorithms.soo.nonconvex.pattern_search.PatternSearch\n",
     "    :noindex:"
    ]
   }
@@ -94,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
