--- a/doc/source/algorithms/rnsga2.ipynb
+++ b/doc/source/algorithms/rnsga2.ipynb
@@ -67,9 +67,16 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sdfs\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<pymoo.visualization.scatter.Scatter at 0x7f953ac34950>"
+       "<pymoo.visualization.scatter.Scatter at 0x7f808040b3d0>"
       ]
      },
      "execution_count": 1,
@@ -141,7 +148,7 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    ".. autoclass:: pymoo.algorithms.rnsga2.RNSGA2\n",
+    ".. autoclass:: pymoo.algorithms.moo.rnsga2.RNSGA2\n",
     "    :noindex:"
    ]
   }
@@ -163,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
