--- a/doc/source/getting_started/part_5.ipynb
+++ b/doc/source/getting_started/part_5.ipynb
@@ -36,21 +36,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We hope you have enjoyed the getting started guide. For more topics we refer to each section covered by on the [landing page](https://pymoo.org). If you have any question or concern do not hesitate to [contact us](contact.rst)."
+    "This getting started guide has covered the most common steps of a multi-objective optimization scenario. More details about each of the topics being shown in this guide are available in the corresponding topic sections."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ".. admonition:: Overview\n",
+    "    :class: myOwnStyle\n",
+    "\n",
+    "    - `Interface <../interface/index.ipynb>`_: An overview over the most important parameters of the interface.\n",
+    "    - `Problems <../problems/index.ipynb>`_: A guide how to implement your own custom problem and how to use test problems alrady being implemented.\n",
+    "    - `Algorithms <../algorithms/index.ipynb>`_: Information about all algorithms and how to use them for optimization.\n",
+    "    - `Operators <../operators/index.ipynb>`_: An overview of evolutionary operators.\n",
+    "    - `Customization <../customization/index.ipynb>`_: How to design your custom evolutionary operators to develop an efficient genetic algorithm for your specific optimization problem.\n",
+    "    - `Visualization <../visualization/index.ipynb>`_: Different techniques for visualization the results of an optimization run or a single solution.\n",
+    "    - `Decision Making <../decision_making/index.ipynb>`_: How to select a solution from a solution set.\n",
+    "    - `FAQ <../faq.ipynb>`_: Frequently asked questions."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Citation"
+    "We hope you have enjoyed the getting started guide. For more topics we refer to each section covered by on the [landing page](https://pymoo.org). If you have any question or concern do not hesitate to [contact us](../contact.rst)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you have used **pymoo** for research purposes please refer to our framework in your reports or publication by:"
+    "### Cite Us"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you have used *pymoo* for research purposes please refer to our framework in your reports or publication by:"
    ]
   },
   {
@@ -71,13 +97,6 @@
     "        pages={89497-89509},\n",
     "    }\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
