Added ES, SRES and ISRES

--- a/doc/source/installation.ipynb
+++ b/doc/source/installation.ipynb
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For MacOSX and Windows **compiled** packages are available.  For Linux the package will be compiled during installation (make sure that **NumPy** is installed before executing the **pip** command). If you encounter any difficulties during compilation or you prefer to compile the package by yourself please the our guide [below](#compilation)."
+    "For MacOSX and Windows **compiled** packages are available.  For Linux the package will be compiled during installation (make sure that **NumPy** is installed before executing the **pip** command). If you encounter any difficulties during compilation or you prefer to compile the package by yourself please the our guide [below](#Compilation)."
    ]
   },
   {
