--- a/doc/source/operators/repair.ipynb
+++ b/doc/source/operators/repair.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Repair\n",
+    "# Repair\n",
     "\n",
     "The repair operator is mostly problem-dependent. Most commonly, it is used to make sure the algorithm is only searching in the feasible space. It is applied after the offsprings have been reproduced. In the following, we are using the knapsack problem to demonstrate the repair operator in *pymoo*.\n"
    ]
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -48,24 +48,22 @@
       "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     fopt     |     favg    \n",
       "===========================================================================\n",
       "    1 |     200 |  2.36000E+02 |  5.18510E+02 |            - |            -\n",
-      "    2 |     400 |  8.40000E+01 |  3.79885E+02 |            - |            -\n",
-      "    3 |     600 |  6.40000E+01 |  2.77510E+02 |            - |            -\n",
-      "    4 |     800 |  1.80000E+01 |  1.93755E+02 |            - |            -\n",
-      "    5 |    1000 |  0.00000E+00 |  1.24215E+02 |         -340 | -2.76250E+02\n",
-      "    6 |    1200 |  0.00000E+00 |  6.82600E+01 |         -456 | -2.79042E+02\n",
-      "    7 |    1400 |  0.00000E+00 |  2.84550E+01 |         -491 | -2.80613E+02\n",
-      "    8 |    1600 |  0.00000E+00 |  4.920000000 |         -502 | -2.84581E+02\n",
-      "    9 |    1800 |  0.00000E+00 |  0.00000E+00 |         -502 | -3.08510E+02\n",
-      "   10 |    2000 |  0.00000E+00 |  0.00000E+00 |         -568 | -3.69350E+02\n"
+      "    2 |     400 |  2.14000E+02 |  3.84785E+02 |            - |            -\n",
+      "    3 |     600 |  3.20000E+01 |  3.00710E+02 |            - |            -\n",
+      "    4 |     800 |  2.20000E+01 |  2.27005E+02 |            - |            -\n",
+      "    5 |    1000 |  0.00000E+00 |  1.55975E+02 | -4.18000E+02 | -3.10571E+02\n",
+      "    6 |    1200 |  0.00000E+00 |  8.82700E+01 | -4.46000E+02 | -2.78000E+02\n",
+      "    7 |    1400 |  0.00000E+00 |  3.87350E+01 | -4.47000E+02 | -2.90621E+02\n",
+      "    8 |    1600 |  0.00000E+00 |  5.860000000 | -4.82000E+02 | -2.96737E+02\n",
+      "    9 |    1800 |  0.00000E+00 |  0.00000E+00 | -5.34000E+02 | -3.18290E+02\n",
+      "   10 |    2000 |  0.00000E+00 |  0.00000E+00 | -5.60000E+02 | -3.81665E+02\n"
      ]
     }
    ],
    "source": [
     "from pymoo.factory import get_crossover, get_mutation, get_sampling\n",
     "from pymoo.optimize import minimize\n",
-    "from pymoo.algorithms.so_genetic_algorithm import GA\n",
-    "\n",
-    "\n",
+    "from pymoo.algorithms.soo.nonconvex.ga import GA\n",
     "from pymoo.problems.single.knapsack import create_random_knapsack_problem\n",
     "\n",
     "problem = create_random_knapsack_problem(30)\n",
@@ -141,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -151,16 +149,16 @@
       "===========================================================================\n",
       "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     fopt     |     favg    \n",
       "===========================================================================\n",
-      "    1 |     171 |  0.00000E+00 |  0.00000E+00 |         -437 | -1.47743E+02\n",
-      "    2 |     371 |  0.00000E+00 |  0.00000E+00 |         -437 | -2.21790E+02\n",
-      "    3 |     571 |  0.00000E+00 |  0.00000E+00 |         -474 | -2.66900E+02\n",
-      "    4 |     771 |  0.00000E+00 |  0.00000E+00 |         -524 | -3.20120E+02\n",
-      "    5 |     971 |  0.00000E+00 |  0.00000E+00 |         -544 | -3.71800E+02\n",
-      "    6 |    1171 |  0.00000E+00 |  0.00000E+00 |         -640 | -4.14070E+02\n",
-      "    7 |    1371 |  0.00000E+00 |  0.00000E+00 |         -640 | -4.54460E+02\n",
-      "    8 |    1571 |  0.00000E+00 |  0.00000E+00 |         -657 | -4.84725E+02\n",
-      "    9 |    1771 |  0.00000E+00 |  0.00000E+00 |         -657 | -5.16825E+02\n",
-      "   10 |    1971 |  0.00000E+00 |  0.00000E+00 |         -657 | -5.34625E+02\n"
+      "    1 |     175 |  0.00000E+00 |  0.00000E+00 | -4.29000E+02 | -1.54211E+02\n",
+      "    2 |     375 |  0.00000E+00 |  0.00000E+00 | -4.32000E+02 | -2.43935E+02\n",
+      "    3 |     575 |  0.00000E+00 |  0.00000E+00 | -4.86000E+02 | -3.08655E+02\n",
+      "    4 |     775 |  0.00000E+00 |  0.00000E+00 | -5.50000E+02 | -3.59660E+02\n",
+      "    5 |     975 |  0.00000E+00 |  0.00000E+00 | -5.65000E+02 | -4.00830E+02\n",
+      "    6 |    1175 |  0.00000E+00 |  0.00000E+00 | -6.21000E+02 | -4.36275E+02\n",
+      "    7 |    1375 |  0.00000E+00 |  0.00000E+00 | -6.57000E+02 | -4.71575E+02\n",
+      "    8 |    1575 |  0.00000E+00 |  0.00000E+00 | -6.64000E+02 | -5.06620E+02\n",
+      "    9 |    1775 |  0.00000E+00 |  0.00000E+00 | -6.70000E+02 | -5.31635E+02\n",
+      "   10 |    1975 |  0.00000E+00 |  0.00000E+00 | -6.70000E+02 | -5.51240E+02\n"
      ]
     }
    ],
