Added AGE-MOEA article to bibtex references with key 'agemoea'.

--- a/doc/source/references.bib
+++ b/doc/source/references.bib
@@ -616,6 +616,21 @@ series = {EMO’07}
 }
 
 
+@article{agemoea,
+abstract = {In the last decade, several evolutionary algorithms have been proposed in the literature for solving multi- and many-objective optimization problems. The performance of such algorithms depends on their capability to produce a well-diversified front (diversity) that is as closer to the Pareto optimal front as possible (proximity). Diversity and proximity strongly depend on the geometry of the Pareto front, i.e., whether it forms a Euclidean, spherical or hyperbolic hypersurface. However, existing multi- and many-objective evolutionary algorithms show poor versatility on different geometries. To address this issue, we propose a novel evolutionary algorithm that: (1) estimates the geometry of the generated front using a fast procedure with O(M × N) computational complexity (M is the number of objectives and N is the population size); (2) adapts the diversity and proximity metrics accordingly. Therefore, to form the population for the next generation, solutions are selected based on their contribution to the diversity and proximity of the non-dominated front with regards to the estimated geometry. Computational experiments show that the proposed algorithm outperforms state-of-the-art multi and many-objective evolutionary algorithms on benchmark test problems with different geometries and number of objectives (M=3,5, and 10).},
+author = {Panichella, Annibale},
+doi = {10.1145/3321707.3321839},
+file = {:C$\backslash$:/Users/crulis/Downloads/main.pdf:pdf},
+isbn = {9781450361118},
+journal = {GECCO 2019 - Proceedings of the 2019 Genetic and Evolutionary Computation Conference},
+keywords = {Genetic Algorithms,Many-objective optimization,Non-Euclidean geometry,Norms},
+mendeley-groups = {multiobjective optimization},
+number = {July},
+pages = {595--603},
+title = {{An adaptive evolutionary algorithm based on non-euclidean geometry for many-objective optimization}},
+year = {2019}
+}
+
 
 @article{modact,
   title = {Realistic {{Constrained Multi}}-{{Objective Optimization Benchmark Problems}} from {{Design}}},
