Added AGE-MOEA the list of documented algorithms

--- a/doc/source/algorithms/index.ipynb
+++ b/doc/source/algorithms/index.ipynb
@@ -39,7 +39,8 @@
     "   rnsga3\n",
     "   moead\n",
     "   ctaea\n",
-    "   brkga\n"
+    "   brkga\n",
+    "   agemoea\n"
    ]
   },
   {
@@ -59,16 +60,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sdfs\n"
-     ]
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-13T12:01:32.100103Z",
+     "iopub.status.busy": "2021-04-13T12:01:32.099524Z",
+     "iopub.status.idle": "2021-04-13T12:01:32.487819Z",
+     "shell.execute_reply": "2021-04-13T12:01:32.488135Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "from pymoo.factory import get_algorithm\n",
     "algorithm = get_algorithm(\"nsga2\")"
@@ -84,7 +84,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-13T12:01:32.492672Z",
+     "iopub.status.busy": "2021-04-13T12:01:32.492242Z",
+     "iopub.status.idle": "2021-04-13T12:01:32.495213Z",
+     "shell.execute_reply": "2021-04-13T12:01:32.495530Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from pymoo.algorithms.moo.nsga2 import NSGA2\n",
@@ -132,7 +139,8 @@
     "   :ref:`U-NSGA-III <nb_unsga3>`, \"UNSGA3\", \"unsga3\", many, x, \"A generalization of NSGA-III to be more efficient for single and bi-objective optimization problems.\"\n",
     "   :ref:`R-NSGA-III <nb_rnsga3>`, \"RNSGA3\", \"rnsga3\", many, x, \"Allows defining aspiration points for NSGA-III to incorporate the user's preference.\"\n",
     "   :ref:`MOEA\\D <nb_moead>`, \"MOEAD\", \"moead\", many, , \"Another well-known multi-objective optimization algorithm based on decomposition.\"\n",
-    "   :ref:`C-TAEA <nb_ctaea>`, \"CTAEA\", \"ctaea\", many, x, \"An algorithm with a more sophisticated constraint-handling for many-objective optimization algoritms.\""
+    "   :ref:`C-TAEA <nb_ctaea>`, \"CTAEA\", \"ctaea\", many, x, \"An algorithm with a more sophisticated constraint-handling for many-objective optimization algoritms.\"\n",
+    "   :ref:`AGE-MOEA <nb_agemoea>`, \"AGEMOEA\", \"agemoea\", many, x, \"Similar to NSGA-II but estimates the shape of the Pareto front to compute a score replacing the crowding distance.\""
    ]
   }
  ],
@@ -152,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "pycharm": {
    "stem_cell": {
