fix StopMutationAfterNgenCallaback comparison operator

--- a/doc/source/interface/callback.ipynb
+++ b/doc/source/interface/callback.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "code": "algorithms/usage_callback.py"
    },
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
     "\n",
     "    def __call__(self, algorithm):\n",
     "\n",
-    "        if algorithm.n_gen > self.after_gen:\n",
+    "        if algorithm.n_gen == self.after_gen:\n",
     "            algorithm.mating.mutation = NoMutation()\n",
     "            # Stop the mutation operator\n",
     "            algorithm.callback = None\n",
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -209,17 +209,17 @@
       "    8 |     800 |  0.051256476 |  0.140740462\n",
       "    9 |     900 |  0.041778020 |  0.110370322\n",
       "   10 |    1000 |  0.041778020 |  0.089125798\n",
-      "   11 |    1100 |  0.031644566 |  0.071339910\n",
       "No mutation anymore!\n",
-      "   12 |    1200 |  0.026194316 |  0.052964354\n",
-      "   13 |    1300 |  0.022080691 |  0.040638787\n",
-      "   14 |    1400 |  0.016721198 |  0.031492776\n",
-      "   15 |    1500 |  0.013337255 |  0.024555195\n",
-      "   16 |    1600 |  0.006373276 |  0.019696538\n",
-      "   17 |    1700 |  0.006373276 |  0.015704680\n",
-      "   18 |    1800 |  0.005149415 |  0.012332816\n",
-      "   19 |    1900 |  0.004403597 |  0.009886008\n",
-      "   20 |    2000 |  0.004403597 |  0.007442544\n"
+      "   11 |    1100 |  0.031644566 |  0.067703807\n",
+      "   12 |    1200 |  0.025634427 |  0.050892023\n",
+      "   13 |    1300 |  0.018530875 |  0.038991673\n",
+      "   14 |    1400 |  0.015780620 |  0.030549532\n",
+      "   15 |    1500 |  0.015780620 |  0.025176166\n",
+      "   16 |    1600 |  0.011922145 |  0.020670936\n",
+      "   17 |    1700 |  0.009995114 |  0.017006136\n",
+      "   18 |    1800 |  0.002863949 |  0.013573917\n",
+      "   19 |    1900 |  0.002816449 |  0.010706763\n",
+      "   20 |    2000 |  0.001792894 |  0.008355458\n"
      ]
     }
    ],
@@ -243,6 +243,13 @@
    "source": [
     "the objective function seems to decrease faster after the tenth generation, compared to the previous run"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
